[package]
name = "stream-study"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures = "0.3.15"
tokio = { version = "1.8.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
